kubernetes/uptime-kuma/lhowsam.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uptime-kuma-lhowsam
  namespace: uptime-kuma
  labels:
    app: uptime-kuma-lhowsam
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: uptime-kuma-lhowsam
  template:
    metadata:
      labels:
        app: uptime-kuma-lhowsam
    spec:
      containers:
        - name: uptime-kuma
          image: louislam/uptime-kuma:2.0.2
          ports:
            - containerPort: 3001
          volumeMounts:
            - name: data
              mountPath: /app/data
          resources:
            requests:
              cpu: 25m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: uptime-kuma-lhowsam-pvc
