kubernetes/uptime-kuma/foam-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-foam
  namespace: uptime-kuma
spec:
  selector:
    app: uptime-kuma-foam
  ports:
    - port: 3001
      targetPort: 3001
