kubernetes/uptime-kuma/lhowsam-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-lhowsam
  namespace: uptime-kuma
spec:
  selector:
    app: uptime-kuma-lhowsam
  ports:
    - port: 3001
      targetPort: 3001
